# NanoC-Compiler

./: .gitignore  CMakeLists.txt  README.md  asm.asm  xmake.lua
examples/: file.nanoc
src/: Compiler_NCASM_to_ByteCode.cpp  Compiler_NCASM_to_ByteCode.h  Compiler_to_NCASM.cpp  Compiler_to_NCASM.h  Error.cpp  Error.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  PreProcessor.cpp  PreProcessor.h  VirtualMachine_NC_ASM.cpp  VirtualMachine_NC_ASM.h  VirtualMachine_NC_BYTE-CODE.cpp  VirtualMachine_NC_BYTE-CODE.h  file.nanoc  main.cpp  main.h
